--- a/prioqueue-collector/manifest.yaml
+++ b/prioqueue-collector/manifest.yaml
@@ -9,15 +9,14 @@ receivers:
 
 processors:
   - gomod: github.com/alexandrosst/weightedqueueprocessor v0.0.0
-    # path: /Users/alexandrosst/data-collection-orchestration/otel-custom/weightedqueueprocessor
     path: ../weightedqueueprocessor
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.142.0
 
 extensions:
   - gomod: github.com/alexandrosst/weightupdateextension v0.0.0
-    # path: /Users/alexandrosst/data-collection-orchestration/otel-custom/weightupdateextension
     path: ../weightupdateextension
 
 exporters:
   - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.142.0
   - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.142.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/prometheusexporter v0.142.0
