feat: Add Freshness Exporter and SLO management to Weight Update Extension
- Introduced a new module `freshnessexporter` with dependencies for OpenTelemetry.
- Updated `config.yaml` to include a new `freshness` exporter and telemetry settings.
- Enhanced `manifest.yaml` to register the new `freshnessexporter`.
- Modified telemetry test script to include timestamps for metrics.
- Expanded `weightupdateextension` to support SLO (Service Level Objective) management:
  - Added HTTP handlers for updating and retrieving SLO thresholds.
  - Implemented shared structures for managing SLO thresholds per tenant.
  - Introduced functions to set and get SLO thresholds with unit conversion.

--- a/prioqueue-collector/config.yaml
+++ b/prioqueue-collector/config.yaml
@@ -29,12 +29,26 @@ exporters:
     verbosity: detailed                    # detailed | normal | basic
     sampling_initial: 5                    # Print first 5 items
     sampling_thereafter: 200               # Then every 200th
+  freshness:
+    tenant_attribute: "source.id"
+    initial_slos:
+      src1: "3s"
+      src2: "500ms"
+      src3: "1s"
 
 service:
+  telemetry:
+    metrics:
+      readers:
+        - pull:
+            exporter:
+              prometheus:
+                host: "0.0.0.0"
+                port: 8888
   extensions: [weightupdate]
 
   pipelines:
     metrics:                               # main pipeline (metrics)
       receivers: [otlp]
       processors: [weightedqueue, batch]
-      exporters: [debug]
+      exporters: [freshness, debug]
