--- a/prioqueue-collector/manifest.yaml
+++ b/prioqueue-collector/manifest.yaml
@@ -17,6 +17,8 @@ extensions:
     path: ../weightupdateextension
 
 exporters:
+  - gomod: github.com/alexandrosst/freshnessexporter v0.0.0
+    path: ../freshnessexporter
   - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.142.0
   - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.142.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/prometheusexporter v0.142.0
